--- a/dailynews.html
+++ b/dailynews.html
@@ -178,7 +178,8 @@
         [(main_title, callback) => process_tinhte("https://tinhte.vn/rss", main_title, callback), "Tinh tế"],
         ["https://news.google.com/publications/CAAqJAgKIh5DQklTRUFnTWFnd0tDbU5oWm1WaWFYb3VkbTRvQUFQAQ?hl=vi&gl=VN&ceid=VN%3Avi", "Cafebiz"],
         ["https://news.google.com/publications/CAAqIQgKIhtDQklTRGdnTWFnb0tDR05oWm1WbUxuWnVLQUFQAQ?hl=vi&gl=VN&ceid=VN%3Avi", "CafeF"],
-        ["https://news.google.com/topics/CAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVAB?hl=vi&gl=VN&ceid=VN%3Avi", "Mới nhất"],
+        ["https://news.google.com/publications/CAAqBwgKMI-apgsw96S-Aw?hl=vi&gl=VN&ceid=VN%3Avi", "VnEconomy"],
+        ["https://news.google.com/topics/CAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVAB?hl=vi&gl=VN&ceid=VN%3Avi", "Tin tức chung"],
         //["https://news.google.com/topics/CAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVAB/sections/CAQiTENCQVNNd29JTDIwdk1EVnFhR2NTQW5acEdnSldUaUlQQ0FRYUN3b0pMMjB2TURGamNtUTFLZzRLREJJS1Ztbmh1NGQwSUU1aGJTZ0EqKggAKiYICiIgQ0JBU0Vnb0lMMjB2TURWcWFHY1NBblpwR2dKV1RpZ0FQAVAB?hl=vi&gl=VN&ceid=VN%3Avi", "VN"],
         //["https://news.google.com/topics/CAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVAB/sections/CAQiTkNCQVNOQW9JTDIwdk1EVnFhR2NTQW5acEdnSldUaUlPQ0FRYUNnb0lMMjB2TURsdWJWOHFFQW9PRWd4VWFPRzZ2eUJuYWVHN20ya29BQSoqCAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVABUAE?hl=vi&gl=VN&ceid=VN%3Avi", "TG"],
         //["https://news.google.com/topics/CAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVAB/sections/CAQiUENCQVNOZ29JTDIwdk1EVnFhR2NTQW5acEdnSldUaUlPQ0FRYUNnb0lMMjB2TURsek1XWXFFZ29RRWc1RWIyRnVhQ0J1WjJocDRidUhjQ2dBKioIAComCAoiIENCQVNFZ29JTDIwdk1EVnFhR2NTQW5acEdnSldUaWdBUAFQAQ?hl=vi&gl=VN&ceid=VN%3Avi", "Doanh nghiệp"],
