--- a/countdown_template.html
+++ b/countdown_template.html
@@ -34,7 +34,7 @@
 
     .shadow {
         font-family: Arial, Helvetica, sans-serif;
-        /*font-size: 92px;*/
+        font-size: 1px;
         padding: 80px 50px;
         text-align: center;
         /*text-transform: uppercase;*/
