--- a/countdown_template.html
+++ b/countdown_template.html
@@ -221,7 +221,7 @@
         start_interval(
             time => {
                 document.querySelector(".counter").innerHTML = write_function(options.template, time);
-                document.querySelector(".counter").style.fontSize = "100%";
+                document.querySelector(".counter").style.fontSize = "20px";
                 document.querySelector(".counter").click();
             },
             () => {
