--- a/infocard_template.html
+++ b/infocard_template.html
@@ -28,6 +28,7 @@
     .infocard.template1 img {
         border-radius: 100%;
         width: 35%;
+        background: white;
     }
 
     .infocard.template2 {
