--- a/dailynews.html
+++ b/dailynews.html
@@ -173,6 +173,7 @@
     }
     const link_list = [
         [(main_title, callback) => process_ytb(main_title, callback), "YouTube"],
+        [(main_title, callback) => process_stackoverflow("https://stackoverflow.blog/newsletter/feed/", main_title, callback), "Stack Overflow"],
         [(main_title, callback) => fetch("https://api.allorigins.win/get?url=" + encodeURIComponent("https://www.reddit.com/.json?feed=7fdac8ab65101cd21a5d5e6e6f4dfad19071f347&user=phonghng")).then(res => res.json()).then(json => process_reddit(json, main_title, callback)), "Reddit"],
         [(main_title, callback) => process_fb("http://fetchrss.com/rss/61f8c4e41d2c61396121d08261f8c4b70bc83a6c8f771002.xml", main_title, callback), "Kinh tế học giản đơn"],
         [(main_title, callback) => process_tinhte("https://tinhte.vn/rss", main_title, callback), "Tinh tế"],
@@ -204,6 +205,23 @@
             });
     }
     function process_fb(url, main_title, callback) {
+        fetch("https://api.allorigins.win/get?url=" + url)
+            .then(res => res.json())
+            .then(json => {
+                let parsed = new X2JS().xml_str2json(json.contents).rss.channel.item;
+                console.log(parsed);
+                let flag = false;
+                parsed.forEach(article => {
+                    if (full_whitelist[main_title] == article.title) flag = true;
+                    if (!flag)
+                        document.body.innerHTML += ("<div class='article'><div onclick='window.open(\"" + article.link + "\");'><div><h3>" + article.title + "</h3><i>" + article.creator.__text + " - " + article.pubDate + "</i></div></div></div>")
+                });
+                document.body.innerHTML += "<i>Đã tải xong!</i>";
+                set_whitelist(parsed.slice(0, 1)[0].title, main_title);
+                callback();
+            });
+    }
+    function process_stackoverflow(url, main_title, callback) {
         fetch("https://api.allorigins.win/get?url=" + url)
             .then(res => res.json())
             .then(json => {
@@ -262,7 +280,7 @@
         api_key = "AIzaSyCUyUlEcT2eul0-_5k6X15WN_d3Mgu_jrM",
         client_id = "509723180239-df84foq7m5lc2g158sqdqnb9ummdphhl.apps.googleusercontent.com",
         client_secret = "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",
-        redirect_uri = "https://phonglan123.github.io/archive/dailynews.html", // http://127.0.0.1:5500 - https://phonglan123.github.io/archive/dailynews.html
+        redirect_uri = "http://127.0.0.1:5500", // http://127.0.0.1:5500 - https://phonglan123.github.io/archive/dailynews.html
         ytb_enabled = true;
 
     function send_gg_auth(code, callback) {
