--- a/dailynews.html
+++ b/dailynews.html
@@ -151,11 +151,11 @@
     function process_ytb(main_title, callback) {
         youtube_sub_channelids.sort((a, b) => new Date(b.time) - new Date(a.time));
         console.log(youtube_sub_channelids);
-        if(!full_whitelist[main_title] || typeof full_whitelist[main_title] != "object")
+        if (!full_whitelist[main_title] || typeof full_whitelist[main_title] != "object")
             full_whitelist[main_title] = []
         console.log(JSON.stringify(full_whitelist[main_title]));
         full_whitelist[main_title].forEach((title, index) => {
-            if(!youtube_sub_channelids.map(article => article.title).includes(title))
+            if (!youtube_sub_channelids.map(article => article.title).includes(title))
                 delete full_whitelist[main_title][index];
         });
         console.log(JSON.stringify(full_whitelist[main_title]));
@@ -173,7 +173,8 @@
     }
     const link_list = [
         [(main_title, callback) => process_ytb(main_title, callback), "YouTube"],
-        [(main_title, callback) => process_stackoverflow("https://stackoverflow.blog/newsletter/feed/", main_title, callback), "Stack Overflow"],
+        [(main_title, callback) => process_stackoverflow("https://stackoverflow.blog/newsletter/feed/", main_title, callback), "The Overflow"],
+        [(main_title, callback) => process_stackoverflow_podcast("https://feeds.simplecast.com/XA_851k3", main_title, callback), "Stack Overflow Podcast"],
         [(main_title, callback) => fetch("https://api.allorigins.win/get?url=" + encodeURIComponent("https://www.reddit.com/.json?feed=7fdac8ab65101cd21a5d5e6e6f4dfad19071f347&user=phonghng")).then(res => res.json()).then(json => process_reddit(json, main_title, callback)), "Reddit"],
         [(main_title, callback) => process_fb("http://fetchrss.com/rss/61f8c4e41d2c61396121d08261f8c4b70bc83a6c8f771002.xml", main_title, callback), "Kinh tế học giản đơn"],
         [(main_title, callback) => process_tinhte("https://tinhte.vn/rss", main_title, callback), "Tinh tế"],
@@ -238,6 +239,23 @@
                 callback();
             });
     }
+    function process_stackoverflow_podcast(url, main_title, callback, top_10 = true) {
+        fetch("https://api.allorigins.win/get?url=" + url)
+            .then(res => res.json())
+            .then(json => {
+                let parsed = new X2JS().xml_str2json(json.contents).rss.channel.item;
+                console.log(parsed);
+                let flag = false;
+                (top_10 ? parsed.slice(0, 11) : parsed).forEach(article => {
+                    if (full_whitelist[main_title] == article.title[0]) flag = true;
+                    if (!flag)
+                        document.body.innerHTML += ("<div class='article'><div onclick='window.open(\"" + article.link + "\");'><div><h3>(ep. " + article.episode.__text + ") " + article.title[0] + "</h3><i>" + article.author[1].__text + " - " + article.pubDate + "</i></div></div></div>")
+                });
+                document.body.innerHTML += "<i>Đã tải xong!</i>";
+                set_whitelist(parsed.slice(0, 1)[0].title[0], main_title);
+                callback();
+            });
+    }
     let encode_title = title => extra_encode(title);
     let bigIntPow = function power(x, y) {// x**y
         let ZERO = BigInt(0);
@@ -280,7 +298,16 @@
         api_key = "AIzaSyCUyUlEcT2eul0-_5k6X15WN_d3Mgu_jrM",
         client_id = "509723180239-df84foq7m5lc2g158sqdqnb9ummdphhl.apps.googleusercontent.com",
         client_secret = "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",
-        redirect_uri = "https://phonglan123.github.io/archive/dailynews.html", // http://127.0.0.1:5500 - https://phonglan123.github.io/archive/dailynews.html
+        redirect_uri = (() => {
+            switch (new URL(location.href).hostname) {
+                case "127.0.0.1":
+                    return "http://127.0.0.1:5500";
+                    break;
+                case "phonglan123.github.io":
+                    return "https://phonglan123.github.io/archive/dailynews.html";
+                    break;
+            }
+        })(),
         ytb_enabled = true;
 
     function send_gg_auth(code, callback) {
