--- a/dailynews.html
+++ b/dailynews.html
@@ -190,6 +190,7 @@
         [(main_title, callback) => process_fb("http://fetchrss.com/rss/61f8c4e41d2c61396121d08261f8c4b70bc83a6c8f771002.xml", main_title, callback), "Kinh tế học giản đơn"],
         [(main_title, callback) => fetch("https://api.allorigins.win/get?url=" + encodeURIComponent("https://www.reddit.com/.json?feed=7fdac8ab65101cd21a5d5e6e6f4dfad19071f347&user=phonghng")).then(res => res.json()).then(json => process_reddit(json, main_title, callback)), "Reddit"],
         [(main_title, callback) => process_tinhte("https://tinhte.vn/rss", main_title, callback), "Tinh tế"],
+        [(main_title, callback) => process_lostbird("https://api.lostbird.vn/lostbird/public/v1/posts?per_page=50", main_title, callback), "Lost bird"],
         ["https://news.google.com/publications/CAAqBwgKMI-apgsw96S-Aw?hl=vi&gl=VN&ceid=VN%3Avi", "VnEconomy"],
         ["https://news.google.com/publications/CAAqJAgKIh5DQklTRUFnTWFnd0tDbU5oWm1WaWFYb3VkbTRvQUFQAQ?hl=vi&gl=VN&ceid=VN%3Avi", "Cafebiz"],
         //["https://news.google.com/publications/CAAqIQgKIhtDQklTRGdnTWFnb0tDR05oWm1WbUxuWnVLQUFQAQ?hl=vi&gl=VN&ceid=VN%3Avi", "CafeF"],
@@ -200,6 +201,24 @@
         //["https://news.google.com/topics/CAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVAB/sections/CAQiTENCQVNNd29JTDIwdk1EVnFhR2NTQW5acEdnSldUaUlPQ0FRYUNnb0lMMjB2TURKcWFuUXFEd29ORWd0SGFlRzZvMmtnZEhMRHJTZ0EqKggAKiYICiIgQ0JBU0Vnb0lMMjB2TURWcWFHY1NBblpwR2dKV1RpZ0FQAVAB?hl=vi&gl=VN&ceid=VN%3Avi", "Giải trí"],
         //["https://news.google.com/topics/CAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVAB/sections/CAQiS0NCQVNNZ29JTDIwdk1EVnFhR2NTQW5acEdnSldUaUlPQ0FRYUNnb0lMMjB2TURadWRHb3FEZ29NRWdwVWFPRzdneUIwYUdGdktBQSoqCAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVABUAE?hl=vi&gl=VN&ceid=VN%3Avi", "Thể thao"]
     ];
+    function process_lostbird(url, main_title, callback) {
+        fetch("https://api.allorigins.win/get?url=" + encodeURIComponent(url))
+            .then(res => res.json())
+            .then(json => {
+                let parsed = JSON.parse(json.contents);
+                console.log(parsed);
+                let flag = false;
+                parsed.forEach(article => {
+                    article.pubDate = article.date;
+                    flag = check_title_post(article, main_title, flag);
+                    if (!flag)
+                        document.body.innerHTML += ("<div class='article'><div onclick='window.open(\"" + article.permalink + "\");'><div><h3>" + article.title + "</h3><i>" + article.pubDate + "</i></div></div></div>")
+                });
+                document.body.innerHTML += "<i>Đã tải xong!</i>";
+                set_whitelist(parsed.slice(0, 1)[0], main_title);
+                callback();
+            });
+    }
     function process_tinhte(url, main_title, callback) {
         fetch("https://api.allorigins.win/get?url=" + url)
             .then(res => res.json())
@@ -314,6 +333,7 @@
         api_key = "AIzaSyCUyUlEcT2eul0-_5k6X15WN_d3Mgu_jrM",
         client_id = "509723180239-df84foq7m5lc2g158sqdqnb9ummdphhl.apps.googleusercontent.com",
         client_secret = "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",
+        access_token_cookie_exdays = 36500,
         redirect_uri = (() => {
             switch (new URL(location.href).hostname) {
                 case "127.0.0.1":
@@ -326,6 +346,29 @@
         })(),
         ytb_enabled = true;
 
+    function setCookie(cname, cvalue, exdays) {
+        const d = new Date();
+        d.setTime(d.getTime() + (exdays * 24 * 60 * 60 * 1000));
+        let expires = "expires=" + d.toUTCString();
+        document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+    }
+
+    function getCookie(cname) {
+        let name = cname + "=";
+        let decodedCookie = document.cookie; // decodeURIComponent(document.cookie)
+        let ca = decodedCookie.split(';');
+        for (let i = 0; i < ca.length; i++) {
+            let c = ca[i];
+            while (c.charAt(0) == ' ') {
+                c = c.substring(1);
+            }
+            if (c.indexOf(name) == 0) {
+                return c.substring(name.length, c.length);
+            }
+        }
+        return "";
+    }
+
     function send_gg_auth(code, callback) {
         var url = "https://oauth2.googleapis.com/token";
 
@@ -337,34 +380,9 @@
         xhr.onreadystatechange = function () {
             if (xhr.readyState === 4) {
                 window.history.pushState('page2', 'Title', new URL(location.href).pathname);
-                fetch("https://youtube.googleapis.com/youtube/v3/subscriptions?part=snippet,contentDetails&maxResults=100&mine=true&key=" + api_key, {
-                    headers: {
-                        Accept: "application/json",
-                        Authorization: "Bearer " + JSON.parse(xhr.responseText).access_token
-                    }
-                }).then(res => res.json()).then(json => {
-                    let counter = 0;
-                    json.items.forEach((channel, index) => {
-                        fetch("https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&playlistId=" + channel.snippet.resourceId.channelId.replace("C", "U") + "&key=" + api_key)
-                            .then(res => res.json())
-                            .then(new_json => {
-                                let temp = [];
-                                new_json.items.slice(0, channel.contentDetails.newItemCount <= 3 ? 3 : channel.contentDetails.newItemCount).forEach(item => {
-                                    temp.push({
-                                        title: item.snippet.title,
-                                        source: item.snippet.channelTitle,
-                                        link: "https://youtube.com/watch?v=" + item.snippet.resourceId.videoId,
-                                        image: item.snippet.thumbnails.default.url,
-                                        time: item.snippet.publishedAt
-                                    });
-                                });
-                                youtube_sub_channelids.push(temp);
-                                youtube_sub_channelids = youtube_sub_channelids.flat();
-                                counter++;
-                                if (counter == json.items.length) callback();
-                            });
-                    });
-                });
+                let code = JSON.parse(xhr.responseText).access_token;
+                setCookie("ggauth", code, access_token_cookie_exdays);
+                send_ytb_sub(code, callback);
             }
         };
 
@@ -373,7 +391,40 @@
         xhr.send(data);
     }
 
-    if (!new URL(location.href).searchParams.get("code") && ytb_enabled)
+    function send_ytb_sub(code, callback) {
+        fetch("https://youtube.googleapis.com/youtube/v3/subscriptions?part=snippet,contentDetails&maxResults=100&mine=true&key=" + api_key, {
+            headers: {
+                Accept: "application/json",
+                Authorization: "Bearer " + code
+            }
+        }).then(res => res.json()).then(json => {
+            let counter = 0;
+            json.items.forEach((channel, index) => {
+                fetch("https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&playlistId=" + channel.snippet.resourceId.channelId.replace("C", "U") + "&key=" + api_key)
+                    .then(res => res.json())
+                    .then(new_json => {
+                        let temp = [];
+                        new_json.items.slice(0, channel.contentDetails.newItemCount <= 3 ? 3 : channel.contentDetails.newItemCount).forEach(item => {
+                            temp.push({
+                                title: item.snippet.title,
+                                source: item.snippet.channelTitle,
+                                link: "https://youtube.com/watch?v=" + item.snippet.resourceId.videoId,
+                                image: item.snippet.thumbnails.default.url,
+                                time: item.snippet.publishedAt
+                            });
+                        });
+                        youtube_sub_channelids.push(temp);
+                        youtube_sub_channelids = youtube_sub_channelids.flat();
+                        counter++;
+                        if (counter == json.items.length) callback();
+                    });
+            });
+        });
+    }
+
+    if(getCookie("ggauth"))
+        send_ytb_sub(getCookie("ggauth"), loadmore_x);
+    else if (!new URL(location.href).searchParams.get("code") && ytb_enabled)
         location.href = "https://accounts.google.com/o/oauth2/auth/oauthchooseaccount?scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fyoutube.readonly&response_type=code&access_type=offline&redirect_uri=" + encodeURIComponent(redirect_uri) + "&client_id=" + client_id + "&flowName=GeneralOAuthFlow";
     else
         send_gg_auth(new URL(location.href).searchParams.get("code"), loadmore_x);
