--- a/pitlyred_create.html
+++ b/pitlyred_create.html
@@ -157,7 +157,7 @@
             result_elm.innerHTML = `Đang tạo trang chuyển hướng...`;
 
             encrypt_url(long_url, secret_pasphrase, hashed => {
-                let redirect_page_url = new URL(location.href).pathname.replace("create", "view") + "?id=" + hashed;
+                let redirect_page_url = new URL(location.href).origin + new URL(location.href).pathname.replace("create", "view") + "?id=" + hashed;
                 result_elm.innerHTML = `Trang chuyển hướng của bạn: <a target="_blank" href="${redirect_page_url}">${redirect_page_url}</a>`;
                 document.querySelector("#result").style.display = "block";
             });
