--- a/dailynews.html
+++ b/dailynews.html
@@ -60,7 +60,7 @@
         set_whitelist = (article, main_title) => {
             if (main_title == "Reddit")
                 article.pubDate = article.created;
-            if (new Date(article.pubDate).getTime() > full_whitelist[main_title])
+            if (!full_whitelist[main_title] || new Date(article.pubDate).getTime() > full_whitelist[main_title])
                 full_whitelist[main_title] = new Date(article.pubDate).getTime();
             localStorage.setItem("whitelist", JSON.stringify(full_whitelist));
         },
