--- a/dailynews.html
+++ b/dailynews.html
@@ -57,11 +57,11 @@
         whitelist = get_wl(),
         full_whitelist = get_wl(true),
         curent_index = 0,
-        set_whitelist = (article, main_title) => {
+        set_whitelist = (article, main_title, value = new Date().getTime()) => {
             if (main_title == "Reddit")
                 article.pubDate = article.created;
             //if (!full_whitelist[main_title] || new Date(article.pubDate).getTime() > full_whitelist[main_title])
-                full_whitelist[main_title] = new Date().getTime();
+            full_whitelist[main_title] = value;
             localStorage.setItem("whitelist", JSON.stringify(full_whitelist));
         },
         check_whitelist = title => {
@@ -185,6 +185,21 @@
         callback();
     }
     const link_list = [
+        [(main_title, callback) => process_quote([
+            ["[20% khách hàng] tạo ra [80% lợi nhuận] công ty!", "Quy luật 80-20"],
+            ["May mắn ở [ngoài vùng an toàn]!", "Tư duy của người Do Thái"],
+            ["Don't leave your comfort zone, [expand] it!", "Elizabeth Kuster"],
+            ["Không có [thất bại], chỉ có [kinh nghiệm]!", "Adom Khoo"],
+            ["[Ước mơ to], [bước đi nhỏ]!", "Adom Khoo"],
+            ["Nếu cơ hội chưa gõ cửa nhà bạn tức là bạn chưa có cửa. [Hãy làm lấy một cái]!", "Adom Khoo"],
+            ["Hãy bơi trong [luồng nước rộng]!", "Sách Chiến lược đại dương xanh"],
+            ["Bây giờ, không còn là cá lớn nuốt cá bé, mà là [cá nhanh nuốt cá chậm]!", "Sách Xây dựng để trường tồn"],
+            ["Sự thật là các công ty hàng đầu [không] hề bắt đầu từ một [ý tưởng vĩ đại].", "Sách Xây dựng để trường tồn"],
+            ["Một đầu óc thông minh siêu việt phải có khả năng nắm giữ [hai ý tưởng trái ngược] cùng một lúc, mà vẫn có thể phân tích chúng", "F. Scott Fitzgerald"],
+            ["[Tốt] là kẻ thù của [vĩ đại]!", "Sách Từ tốt đến vĩ đại"],
+            ["Living your [someday], [today]!", "Brett (someone)"]
+        ], main_title, callback), "Trích dẫn hay"],
+        [(main_title, callback) => process_weather(callback), "Dự báo thời tiết"],
         [(main_title, callback) => process_wikipedia("default", 0, main_title, callback, {}), "Wikipedia"],
         [(main_title, callback) => process_ytb(main_title, callback), "YouTube"],
         [(main_title, callback) => process_stackoverflow_podcast("https://stackoverflow.blog/podcast/feed/", main_title, callback), "Stack Overflow Podcast"],
@@ -193,7 +208,8 @@
         [(main_title, callback) => fetch("https://api.allorigins.win/get?url=" + encodeURIComponent("https://www.reddit.com/.json?feed=7fdac8ab65101cd21a5d5e6e6f4dfad19071f347&user=phonghng")).then(res => res.json()).then(json => process_reddit(json, main_title, callback)), "Reddit"],
         [(main_title, callback) => process_tinhte("https://tinhte.vn/rss", main_title, callback), "Tinh tế"],
         [(main_title, callback) => process_lostbird("https://api.lostbird.vn/lostbird/public/v1/posts?per_page=50", main_title, callback), "Lost bird"],
-        [(main_title, callback) => process_spiderum("https://spiderum.com/api/v1/feed/getAllPosts?type=new&page=1", main_title, callback), "Spiderum"],
+        //[(main_title, callback) => process_spiderum("https://spiderum.com/api/v1/feed/getAllPosts?type=new&page=1", main_title, callback), "Spiderum"],
+        [(main_title, callback) => process_sputniknews("https://vn.sputniknews.com/services/widget/lenta/", main_title, callback), "Sputnik News VN"],
         ["https://news.google.com/publications/CAAqBwgKMI-apgsw96S-Aw?hl=vi&gl=VN&ceid=VN%3Avi", "VnEconomy"],
         ["https://news.google.com/publications/CAAqJAgKIh5DQklTRUFnTWFnd0tDbU5oWm1WaWFYb3VkbTRvQUFQAQ?hl=vi&gl=VN&ceid=VN%3Avi", "Cafebiz"],
         //["https://news.google.com/publications/CAAqIQgKIhtDQklTRGdnTWFnb0tDR05oWm1WbUxuWnVLQUFQAQ?hl=vi&gl=VN&ceid=VN%3Avi", "CafeF"],
@@ -204,6 +220,56 @@
         //["https://news.google.com/topics/CAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVAB/sections/CAQiTENCQVNNd29JTDIwdk1EVnFhR2NTQW5acEdnSldUaUlPQ0FRYUNnb0lMMjB2TURKcWFuUXFEd29ORWd0SGFlRzZvMmtnZEhMRHJTZ0EqKggAKiYICiIgQ0JBU0Vnb0lMMjB2TURWcWFHY1NBblpwR2dKV1RpZ0FQAVAB?hl=vi&gl=VN&ceid=VN%3Avi", "Giải trí"],
         //["https://news.google.com/topics/CAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVAB/sections/CAQiS0NCQVNNZ29JTDIwdk1EVnFhR2NTQW5acEdnSldUaUlPQ0FRYUNnb0lMMjB2TURadWRHb3FEZ29NRWdwVWFPRzdneUIwYUdGdktBQSoqCAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVABUAE?hl=vi&gl=VN&ceid=VN%3Avi", "Thể thao"]
     ];
+    function process_weather(callback) {
+        document.body.innerHTML += `<div id="ww_cd01e0259e2dc" v='1.20' loc='auto' a='{"t":"horizontal","lang":"vi","ids":[],"cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","sl_sot":"celsius","sl_ics":"one","font":"Arial"}' style="max-width: 100%;">Weather for the Following Location: <a href="https://2ua.org/fra/paris/map/" id="ww_cd01e0259e2dc_u" target="_blank">Paris on Map</a></div><br/><br/><div id="ww_f0329eafc322d" v='1.20' loc='auto' a='{"t":"responsive","lang":"vi","ids":[],"cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","sl_sot":"celsius","sl_ics":"one","font":"Arial"}'>Weather for the Following Location: <a href="https://2ua.org/usa/los_angeles/map/" id="ww_f0329eafc322d_u" target="_blank">Los Angeles on Map</a></div>`;
+        let script_tag;
+        script_tag = document.createElement("script");
+        script_tag.src = "https://srv2.weatherwidget.org/js/?id=ww_cd01e0259e2dc";
+        document.body.appendChild(script_tag);
+        script_tag = document.createElement("script");
+        script_tag.src = "https://srv2.weatherwidget.org/js/?id=ww_f0329eafc322d";
+        document.body.appendChild(script_tag);
+        let interval = setInterval(() => {
+            if (document.querySelectorAll(".ww-box").length == 2) {
+                clearInterval(interval);
+                callback();
+            }
+        }, 1000);
+    }
+    function process_quote(quotes, main_title, callback) {
+        let
+            random_arr = items => Math.floor(Math.random() * items.length),
+            saved_quotes = full_whitelist[main_title] || [],
+            random_quote = random_arr(quotes);
+        if (saved_quotes.length == quotes.length)
+            saved_quotes = [];
+        while (saved_quotes.includes(random_quote))
+            random_quote = random_arr(quotes);
+        document.body.innerHTML += `<style>.blockquote-bold { color: #e74848; font-weight: bold; } /* center the blockquote in the page */ .blockquote-wrapper { display: flex; /*height: 100vh;*/ padding: 0 20px; } /* Blockquote main style */ .blockquote { position: relative; font-family: 'Barlow Condensed', sans-serif; max-width: 620px; margin: 80px auto; align-self: center; } /* Blockquote header */ .blockquote h1 { /*font-family: 'Abril Fatface', cursive;*/ position: relative; /* for pseudos */ font-size: 2.8rem; font-weight: normal; line-height: 1; margin: 0; border: 2px solid; border: solid 2px; border-radius:20px; padding: 25px; } /* Blockquote right double quotes */ .blockquote h1:after { content:""; position: absolute; border: 2px solid; border-radius: 0 50px 0 0; width: 60px; height: 60px; bottom: -62px; left: 50px; border-bottom: none; border-left: none; z-index: 3; } .blockquote h1:before { content:""; position: absolute; width: 80px; border: 6px solid white; bottom: -3px; left: 50px; z-index: 2; } /* increase header size after 600px */ @media all and (min-width: 600px) { .blockquote h1 { font-size: 3rem; line-height: 1.2; } } /* Blockquote subheader */ .blockquote h4 { position: relative; font-size: 1.3rem; font-weight: 400; line-height: 1.2; margin: 0; padding-top: 15px; z-index: 1; margin-left:150px; padding-left:12px; margin-top: 5px; font-style: italic; } .blockquote h4:first-letter { margin-left:-12px; }</style><div class="blockquote-wrapper"> <div class="blockquote"> <h1> ${quotes[random_quote][0].replace(/\[/g, "<span class='blockquote-bold'>").replace(/\]/g, "</span>")} </h1> <h4>${quotes[random_quote][1]}<!--<br><em>Web Site Usability: A Designer's Guide</em>--></h4> </div> </div>`;
+        saved_quotes.push(random_quote);
+        set_whitelist(undefined, main_title, saved_quotes);
+        callback();
+    }
+    function process_sputniknews(url, main_title, callback) {
+        fetch("https://api.allorigins.win/get?url=" + encodeURIComponent(url))
+            .then(res => res.json())
+            .then(json => {
+                let parsed = new X2JS().xml_str2json(json.contents).div.div[1].div.div[1].div.div;
+                console.log(parsed);
+                let flag = false;
+                parsed.forEach(article => {
+                    article.link = article.a._href;
+                    article.title = article.a.span.span[1].__text;
+                    article.pubDate = parseInt(article.a.span.span[0]["_data-unixtime"]) * 1000;
+                    flag = check_title_post(article, main_title, flag);
+                    if (!flag)
+                        document.body.innerHTML += ("<div class='article'><div onclick='window.open(\"https://vn.sputniknews.com/" + article.link + "\");'><div><h3>" + article.title + "</h3><i>" + new Date(article.pubDate) + "</i></div></div></div>")
+                });
+                document.body.innerHTML += "<i>Đã tải xong!</i>";
+                set_whitelist(parsed.slice(0, 1)[0], main_title);
+                callback();
+            });
+    }
     function process_lostbird(url, main_title, callback) {
         fetch("https://api.allorigins.win/get?url=" + encodeURIComponent(url))
             .then(res => res.json())
@@ -495,10 +561,11 @@
         });
     }
 
-    /*if (getCookie("ggauth"))
+    let save_cookie = true;
+
+    if (save_cookie && getCookie("ggauth"))
         send_ytb_sub(getCookie("ggauth"), loadmore_x);
-    else */
-    if (!new URL(location.href).searchParams.get("code") && ytb_enabled)
+    else if (!new URL(location.href).searchParams.get("code") && ytb_enabled)
         location.href = "https://accounts.google.com/o/oauth2/auth/oauthchooseaccount?scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fyoutube.readonly&response_type=code&access_type=offline&redirect_uri=" + encodeURIComponent(redirect_uri) + "&client_id=" + client_id + "&flowName=GeneralOAuthFlow";
     else
         send_gg_auth(new URL(location.href).searchParams.get("code"), loadmore_x);
