--- a/VNStockSimulator.html
+++ b/VNStockSimulator.html
@@ -6,7 +6,7 @@
 
 <body>
     <div class="box left_bar">
-        <h1 style="margin-block-start: 0; margin-block-end: 0; text-align: center;">Vistsim 5</h1>
+        <h1 style="margin-block-start: 0; margin-block-end: 0; text-align: center;">Vistsim 6</h1>
         <div class="box money_bar"
             onclick="do_action(prompt('Nhập mã cổ phiếu:', ''), prompt('Nhập số cổ phiếu muốn mua/bán:', ''));"
             title="Mua/bán cổ phiếu">0</div>
@@ -24,6 +24,10 @@
             <div class="header">LOGS</div>
             <div id="logs"></div>
         </div>
+    </div>
+
+    <div class="box right_bar">
+        <iframe src="https://banggia.vndirect.com.vn/chung-khoan/danh-muc" style="border: none; margin: -10px; width: calc(100% + 20px); height: calc(100% + 20px);"></iframe>
     </div>
 
     <style>
@@ -54,10 +58,20 @@
         .left_bar {
             background-color: #333333;
             padding: 10px;
-            width: 100%;
+            width: 400px;
             height: 100%;
             overflow: auto;
             margin-top: 0;
+        }
+
+        .right_bar {
+            background-color: #333333;
+            padding: 10px;
+            width: calc(100% - 410px);
+            height: 100%;
+            overflow: auto;
+            margin-top: 0;
+            float: right;
         }
 
         .liveboard {
