--- a/dailynews.html
+++ b/dailynews.html
@@ -561,7 +561,7 @@
         });
     }
 
-    let save_cookie = true;
+    let save_cookie = false;
 
     if (save_cookie && getCookie("ggauth"))
         send_ytb_sub(getCookie("ggauth"), loadmore_x);
