--- a/dailynews.html
+++ b/dailynews.html
@@ -198,7 +198,8 @@
             ["Một đầu óc thông minh siêu việt phải có khả năng nắm giữ [hai ý tưởng trái ngược] cùng một lúc, mà vẫn có thể phân tích chúng", "F. Scott Fitzgerald"],
             ["[Tốt] là kẻ thù của [vĩ đại]!", "Sách Từ tốt đến vĩ đại"],
             ["Living your [someday], [today]!", "Brett (someone)"],
-            ["Người ta không mắc sai lầm vì dốt mà vì [tưởng mình giỏi]", "Daniil Granin"]
+            ["Người ta không mắc sai lầm vì dốt mà vì [tưởng mình giỏi]", "Daniil Granin"],
+            ["[Tập trung] về cơ bản chỉ là [thoát khỏi cám dỗ]!", "Nguyễn Hải Phong (tui nè ^^)"]
         ], main_title, callback), "Trích dẫn hay"],
         [(main_title, callback) => process_weather(callback), "Dự báo thời tiết"],
         [(main_title, callback) => process_wikipedia("default", 0, main_title, callback, {}), "Wikipedia"],
