--- a/dailynews.html
+++ b/dailynews.html
@@ -199,7 +199,8 @@
             ["[Tốt] là kẻ thù của [vĩ đại]!", "Sách Từ tốt đến vĩ đại"],
             ["Living your [someday], [today]!", "Brett (someone)"],
             ["Người ta không mắc sai lầm vì dốt mà vì [tưởng mình giỏi]", "Daniil Granin"],
-            ["[Tập trung] về cơ bản chỉ là [thoát khỏi cám dỗ]!", "Nguyễn Hải Phong (tui nè ^^)"]
+            ["[Tập trung] về cơ bản chỉ là [thoát khỏi cám dỗ]!", "Nguyễn Hải Phong (tui nè ^^)"],
+            ["Rồi chúng ta sẽ [khóc] với những thứ đã từng làm chúng ta [cười]", "Someone"]
         ], main_title, callback), "Trích dẫn hay"],
         [(main_title, callback) => process_weather(callback), "Dự báo thời tiết"],
         [(main_title, callback) => process_wikipedia("default", 0, main_title, callback, {}), "Wikipedia"],
