--- a/dailynews.html
+++ b/dailynews.html
@@ -202,7 +202,7 @@
             ["[Tập trung] về cơ bản chỉ là [thoát khỏi cám dỗ]!", "Nguyễn Hải Phong (tui nè ^^)"],
             ["Rồi chúng ta sẽ [khóc] với những thứ đã từng làm chúng ta [cười]", "Someone"]
         ], main_title, callback), "Trích dẫn hay"],
-        [(main_title, callback) => process_weather(callback), "Dự báo thời tiết"],
+        //[(main_title, callback) => process_weather(callback), "Dự báo thời tiết"],
         [(main_title, callback) => process_wikipedia("default", 0, main_title, callback, {}), "Wikipedia"],
         [(main_title, callback) => process_ytb(main_title, callback), "YouTube"],
         [(main_title, callback) => process_stackoverflow_podcast("https://stackoverflow.blog/podcast/feed/", main_title, callback), "Stack Overflow Podcast"],
